# mmCoreAndDevices

DeviceAdapters/: Makefile.am  configure.ac
DeviceAdapters/FLICamera/: FLICamera.cpp  FLICamera.h  Makefile.am
MMDevice/: MMDeviceConstants.h
