AM_CXXFLAGS = $(MMDEVAPI_CXXFLAGS)
deviceadapter_LTLIBRARIES = libmmgr_dal_FLICamera.la
libmmgr_dal_FLICamera_la_SOURCES = FLICamera.cpp FLICamera.h
libmmgr_dal_FLICamera_la_LIBADD = $(MMDEVAPI_LIBADD) -lfli
libmmgr_dal_FLICamera_la_LDFLAGS = $(MMDEVAPI_LDFLAGS) -lfli

#/home/ryan/git_repos/micro_manager/mmCoreAndDevices/DeviceAdapters/FLICamera/libfli.so
